--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+* {
+  border: 1px solid black;
+}
+
+/* */
+
+#order-summary-card {
+  width: 454px;
+  margin: auto;
+}
+
+/* plan info slice */
+
+.plan-slice-col {
+  width: 32%;
+  display: inline-block;
+}
+
+/* attribution */
+
 .attribution {
   font-size: 11px;
   text-align: center;
@@ -5,15 +25,4 @@
 
 .attribution a {
   color: hsl(228, 45%, 44%);
-}
-
-/* plan info slice */
-
-#plan-slice-container {
-  width: 450px;
-}
-
-.plan-slice-col {
-  width: 33.3%;
-  float: left;
 }
