--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
-* {
+/** {
   border: 1px solid black;
-}
+} */
 
 /* */
 
 body {
   font-family: "Red Hat Display", sans-serif;
+  text-align: center;
 }
 
 /* */
@@ -24,6 +25,10 @@ body {
 .plan-slice-col {
   width: 32%;
   display: inline-block;
+}
+
+#plan-info {
+  text-align: left;
 }
 
 /* attribution */
