--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,17 @@ a {
   width: 450px;
   margin: auto;
   background-color: white;
+  border-radius: 0px 0px 15px 15px;
 }
 
 #order-summary-card p {
   font-size: 16px;
+}
+
+/* card header */
+
+#card-header img {
+  border-radius: 15px 15px 0px 0px;
 }
 
 /* plan info slice */
@@ -72,8 +79,13 @@ a {
 .attribution {
   font-size: 11px;
   text-align: center;
+  border-radius: 0px 0px 15px 15px;
 }
 
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+.attribution #coded-by {
+  border-radius: 0px 0px 15px 15px;
 }
