added some todos

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/*
+  TODO fix box shadows
+  TODO add on hover properties
+  TODO add bottom margin after attribution
+*/
+
 * {
   /* border: 1px solid black; */
   box-sizing: border-box;
