fixed todos so they are highlighted

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*
-  TODO fix box shadows
-  TODO add on hover properties
-  TODO add bottom margin after attribution
+  FIXME: fix box shadows
+  TODO: add on hover properties
+  TODO: add bottom margin after attribution
 */
 
 * {
