--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /*
   FIXME: fix box shadows
-  TODO: add on hover properties
-  TODO: add bottom margin after attribution
+  TODO: add attribution to bottom of page
 */
 
 * {
