--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,19 @@
 /*
   FIXME: fix box shadows
   FIXME: vertically center the card
-  TODO: add background pattern
+  FIXME: margin after cancel button not working
 */
 
 * {
-  /*border: 1px solid black; */
+  /*border: 1px solid black;*/
   box-sizing: border-box;
 }
-
-/* */
 
 body {
   font-family: "Red Hat Display", sans-serif;
   text-align: center;
+  background-image: url("../images/pattern-background-desktop.svg");
+  background-repeat: repeat-x;
   background-color: hsl(225, 100%, 98%);
 }
 
@@ -21,22 +21,11 @@ a {
   text-decoration: none;
 }
 
-#window-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
 /* card */
 
 #order-summary-card {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, 0%);
-
   width: 450px;
-  margin: auto;
+  margin: 0 auto;
   background-color: white;
   border-radius: 15px;
   box-shadow: 0px 4px 8px 0 hsl(223, 30%, 60%),
@@ -145,7 +134,6 @@ a #payment-button:hover {
   width: 80%;
   height: 50px;
   margin: 20px auto 40px;
-  line-height: 50px;
 }
 
 #cancel-button a {
