--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   FIXME: fix box shadows
   FIXME: vertically center the card
   FIXME: margin after cancel button not working
+  FIXME: backgrount color doesnt match design
 */
 
 * {
