--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-/*
-  FIXME: fix box shadows
-  FIXME: thin white line at edge of header image
-*/
-
 * {
   /*border: 1px solid black;*/
   box-sizing: border-box;
@@ -46,6 +41,12 @@ a {
 }
 
 /* card header */
+
+#card-header {
+  background-color: hsl(223, 100%, 51%);
+  border-radius: 15px 15px 0px 0px;
+  height: 220px;
+}
 
 #card-header img {
   border-radius: 15px 15px 0px 0px;
